# RAPTOR

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: check-all.yml  format.yml  tagger.yml
cmake/: RaptorConfig.cmake.in  RaptorConfigVersion.cmake.in
enzyme/Enzyme/: Enzyme.cpp  EnzymeLogic.cpp  EnzymeLogic.h
enzyme/Enzyme/Runtimes/FPRT/: CMakeLists.txt  Counting.cpp  GarbageCollection.cpp
enzyme/include/enzyme/fprt/: flops.def  fprt.h  mpfr-test.h  mpfr.h
enzyme/test/Integration/Truncate/: truncate-all.cpp  warnings.cpp
enzyme/test/Truncate/: truncate-count.cpp
examples/heatmap/: heatmap.cpp
include/enzyme/fprt/: mpfr-test.h  mpfr.h
include/raptor/: enzyme  tuple  type_traits  utils
include/raptor/fprt/: flops.def  fprt.h  mpfr-test.h  mpfr.h
pass/: ActivityAnalysis.cpp  ActivityAnalysis.h  ActivityAnalysisPrinter.cpp  ActivityAnalysisPrinter.h  AdjointGenerator.h  CApi.cpp  CApi.h  CMakeLists.txt  CacheUtility.cpp  CacheUtility.h  CallDerivatives.cpp  DiffeGradientUtils.cpp  DiffeGradientUtils.h  DifferentialUseAnalysis.cpp  DifferentialUseAnalysis.h  Enzyme.cpp  Enzyme.h  EnzymeLogic.cpp  FunctionUtils.cpp  FunctionUtils.h  GradientUtils.cpp  GradientUtils.h  InstructionBatcher.cpp  InstructionBatcher.h  InstructionDerivatives.td  JLInstSimplify.cpp  JLInstSimplify.h  LibraryFuncs.h  MustExitScalarEvolution.cpp  MustExitScalarEvolution.h  PreserveNVVM.cpp  PreserveNVVM.h  Raptor.cpp  Raptor.h  RaptorLogic.cpp  RaptorLogic.h  TraceGenerator.cpp  TraceGenerator.h  TraceInterface.cpp  TraceInterface.h  (+5 more)
pass/Clang/: EnzymeClang.cpp  RaptorClang.cpp  RaptorPassLoader.cpp
pass/TypeAnalysis/: TypeAnalysis.cpp  TypeAnalysis.h
prec-tests/basic-cpp/src/: main.cpp
prec-tests/basic-f90/src/: main.f90
prec-tests/trunc-cpp/: CMakeLists.txt  test.sh
prec-tests/trunc-cpp/src/: main_enzyme.cpp
prec-tests/trunc-f90/: test.sh
prec-tests/trunc-f90/src/: main_patch.f90
runtime/: CMakeLists.txt  Counting.cpp  GarbageCollection.cpp  Trace.cpp
runtime/include/private/raptor/: Common.h  FloatTypes.def
runtime/include/public/raptor/: FloatTypes.def  raptor.h
runtime/include/raptor/fprt/: fprt.h
runtime/ir/: Flops.def  Fprt.cpp  Log.cpp  Mpfr.cpp
scripts/: bundle-includes.sh  raptor_plot_float_histogram.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Integration/: CMakeLists.txt  test_utils.h
test/Integration/Truncate/: CMakeLists.txt  simple.cpp  truncate-all.cpp  truncate-count.cpp  warnings.cpp
test/Integration/Truncate/Cpp/: log.cpp  openmp-cpu.cpp  openmp-gpu.cpp  simple.cpp  truncate-all.cpp  truncate-count.cpp  warnings.cpp
test/Integration/Truncate/Fortran/: simple-mem.f90  simple-no-bindc.f90  simple.f90
test/Integration/Truncate/LLD/: simple.cpp
test/Integration/Truncate/LLD/Inputs/: add_func.cpp  add_func_main.cpp
test/Unit/: CMakeLists.txt
test/Unit/Truncate/: CMakeLists.txt  cmp.ll  const.ll  intrinsic.ll  openmp.ll  select.ll  simple.ll  value.ll
test/prec-tests/basic-c/: test.sh
test/prec-tests/basic-c/src/: main.c
test/prec-tests/basic-cpp/: test.sh
test/prec-tests/basic-f90/: test.sh
test/prec-tests/trunc-cpp/: CMakeLists.txt  test.sh
test/prec-tests/trunc-cpp/src/: main_enzyme.cpp  main_normal.cpp
test/prec-tests/trunc-f90/: test.sh
test/prec-tests/trunc-f90/src/: main_patch.f90  simple_math.f90
wrappers/: CMakeLists.txt  raptor-clang++.in  raptor-clang.in  raptor-flang.in
